<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
    android:background="@drawable/background2"
    android:padding="10dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="@dimen/pad_20dp"
    />
    
    <EditText android:id="@+id/userName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:singleLine="true"
        android:textColor="@color/white"
        android:password="false"
    />
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:textColor="@color/white"
        android:textSize="@dimen/pad_20dp"
        android:text="@string/password"
    />
    
    <EditText android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:singleLine="true"
        android:textColor="@color/white"
        android:password="true"
    /> 
    
     <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:text="@string/password_again"
         android:textColor="@color/white"
         android:textSize="@dimen/pad_20dp"
    />
    
    <EditText android:id="@+id/passwordAgain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:singleLine="true"
        android:textColor="@color/white"
        android:password="true"
    /> 
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="@dimen/pad_20dp"
    />
    
    <EditText android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:textColor="@color/white"
        android:singleLine="true"
        android:password="false"
    /> 
    
    
    <LinearLayout android:orientation="horizontal"
    			  android:layout_width="wrap_content"
    			  android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
			  
    <Button android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
    />
    <Button android:id="@+id/cancel_signUp"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/cancel"
    />
	</LinearLayout>

</LinearLayout>



